# aaa-final-reviewed

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  needfix.md  possibility_follow_up.md  pyproject.toml  roadmap1.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-integration.yml  release-check.yml
demo/local_admin/: README.md
demo/real_world_configs/: README.md  metadata.json
demo/real_world_configs/apache/docker-httpd-default/: httpd.conf
demo/real_world_configs/apache/docs-tls-vhost/: httpd.conf
demo/real_world_configs/apache/docs-vhost-htaccess/: httpd.conf
demo/real_world_configs/iis/microsoft-applicationhost/: applicationHost.config
demo/real_world_configs/iis/microsoft-aspnet-debug/: web.config
demo/real_world_configs/iis/microsoft-request-filtering/: web.config
demo/real_world_configs/lighttpd/docs-default/: lighttpd.conf
demo/real_world_configs/lighttpd/docs-fastcgi-tls/: lighttpd.conf
demo/real_world_configs/nginx/docker-default/: nginx.conf
demo/real_world_configs/nginx/docs-reverse-proxy/: nginx.conf
docs/: architecture.md  audit-policy.md  benchmarks-covering.md  ci-integration.md  control-assessment.md  control-source-coverage-tracker.md  project-status.md  public-config-real-world-testing-report-2026-05-15.md  release.md  report-format.md  resolved-precision-findings.md  roadmap.md  rule-coverage.md  severity-methodology.md  standards-mapping.md  standards-roadmap.md  testing-real-world-configs.md
docs/superpowers/plans/: 2026-05-04-effective-scope-fixes.md  2026-05-04-iis-collection-regression-coverage.md  2026-05-14-open-items-followup.md  2026-06-08-control-source-gap-closure.md  2026-06-11-policy-review-coverage-reclassification.md  2026-06-14-followup-08-nginx-rate-limit-policy.md  2026-06-16-asvs-tls-evidence-completion.md  2026-06-16-nist-tls-evidence-completion.md
docs/superpowers/specs/: 2026-06-11-policy-review-coverage-reclassification-design.md  2026-06-12-coverage-evidence-program-design.md  2026-06-12-followup-01-crosswalk-integrity-design.md  2026-06-12-followup-02-machine-readable-coverage-ledger-design.md  2026-06-12-followup-03-audit-policy-foundation-design.md  2026-06-12-followup-04-control-assessment-reporting-design.md  2026-06-12-followup-05-nginx-reverse-proxy-header-semantics-design.md  2026-06-12-followup-06-nginx-logging-policy-design.md  2026-06-12-followup-07-nginx-sensitive-location-policy-design.md  2026-06-12-followup-08-nginx-rate-limit-policy-design.md  2026-06-12-followup-09-csp-and-response-header-policy-design.md  2026-06-12-followup-10-endpoint-sni-tls-inventory-design.md  2026-06-12-followup-11-apache-root-authorization-baseline-design.md  2026-06-12-followup-12-apache-module-inventory-policy-design.md  2026-06-12-followup-13-iis-schannel-evidence-v2-design.md  2026-06-12-followup-14-final-cross-standard-reconciliation-design.md  2026-06-16-asvs-tls-evidence-completion-design.md  2026-06-16-nist-tls-evidence-completion-design.md  2026-06-18-thesis-testing-coverage-transfer-design.md
scripts/: crosswalk_docs.py  release_check.py  run_real_world_config_samples.ps1
src/webconf_audit/: apache_module_names.py  assessment.py  assessment_models.py  assessment_renderers.py  audit_policy.py  coverage_ledger.py  coverage_models.py  crosswalk_integrity.py  csp.py  csp_ast.py  execution_manifest.py  header_policy.py  hsts_policy.py  models.py  openssl_conf_policy.py  policy_models.py  rule_registry.py  rule_severity.py  rule_standards.py  standard_catalog.py  standards.py  suppressions.py  tls_cipher_policy.py
src/webconf_audit/cli/: __init__.py  __main__.py  coverage.py
src/webconf_audit/data/: __init__.py  control_source_coverage.yml
src/webconf_audit/local/: normalized.py  rule_runner_utils.py  sensitive_artifact_policy.py  universal_rules.py
src/webconf_audit/local/apache/: __init__.py  authorization.py  (+7 more)
src/webconf_audit/report/: __init__.py
tests/: apache_helpers.py  assessment_helpers.py  conftest.py  external_helpers.py  iis_helpers.py  lighttpd_helpers.py  nginx_helpers.py  nginx_logging_policy_helpers.py  nginx_rate_limit_policy_helpers.py  nginx_response_header_policy_helpers.py  nginx_sensitive_location_policy_helpers.py  test_analyzer_control_assessment.py  test_apache_cis_benchmark_policy.py  test_apache_cis_depth_followup.py  test_apache_cis_direct_batch.py  test_apache_cve_related_rules.py  test_apache_effective_vhosts.py  test_apache_htaccess.py  test_apache_inheritance_logging_slice_a.py  test_apache_inheritance_logging_slice_b.py  test_apache_inheritance_logging_slice_c.py  test_apache_inheritance_slice_d_directory_allowoverride.py  test_apache_inheritance_slice_e_denylist.py  test_apache_limits_headers.py  test_apache_listen_ip_policy.py  test_apache_logs_includes_parser.py  test_apache_module_inventory.py  test_apache_options.py  test_apache_parser_depth_policy.py  test_apache_root_authorization.py  test_apache_status_methods_info.py  test_apache_tls_benchmark_policy.py  test_assessment_algorithm.py  test_assessment_cli.py  test_assessment_models.py  test_assessment_renderers.py  test_assessment_security.py  test_audit_policy.py  test_audit_policy_nginx_logging.py  test_audit_policy_nginx_rate_limits.py  (+124 more)
tests/fixtures/rule-corpus/: README.md  manifest.json
tests/integration_local/: test_public_repo_linux_local_rule_coverage.py
tests/integration_optional_external/: test_external_reference_targets.py
tests/integration_real_world_cross_mode/: README.md  conftest.py  docker-compose.yml  manifest.json  test_cross_mode.py
(+424 files in other folders)
