[project]
name = "webconf-audit"
version = "0.1.0"
description = "Web server configuration security audit tool"
requires-python = ">=3.10"
dependencies = [
    # In the absence of a dedicated oldest-supported CI job, keep the
    # lower bounds aligned with the dependency set exercised by the
    # current test environment. Cap the next major so SemVer breakage
    # does not silently land via a fresh `pip install`.
    "click>=8.1,<9.0",
    "defusedxml>=0.7,<1.0",
    "cryptography>=46.0.7,<47",
    "pydantic>=2.12.5,<3.0",
    "pyOpenSSL>=26.0.0,<27",
    "PyYAML>=6.0.3,<7",
    "typer>=0.24.1,<1.0",
]

[project.scripts]
webconf-audit = "webconf_audit.cli:app"

[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "interrogate>=1.7.0,<2",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.12,<1",
]

[tool.ruff]
line-length = 100
exclude = [".tmp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".tmp/pytest-cache"
norecursedirs = [
    ".git",
    ".venv",
    ".tmp",
    "pytest-run-*",
    "pytest-tmp-*",
]

# Docstring coverage. The 40% floor reflects the project convention
# "Default to writing no comments. Only add one when the WHY is
# non-obvious." Public API surfaces, data models, and module-level
# docstrings are documented; small internal helpers with
# self-documenting names are intentionally left bare. The exclusions
# below skip categories where docstrings add noise rather than value
# (private/dunder methods, nested helpers, overloaded stubs).
[tool.interrogate]
fail-under = 40
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-overloaded-functions = true
ignore-property-decorators = true
ignore-property-setters = true
exclude = ["tests", ".tmp", ".venv"]
